--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
         "coverage": "jest --coverage"
     },
     "dependencies": {
-        "axios": "^0.18.0",
-        "qs": "^6.5.2"
+        "axios": "^0.18.1",
+        "qs": "^6.9.1"
     },
     "devDependencies": {
         "dotenv": "^6.1.0",
-        "eslint": "^5.6.1",
-        "jest": "^23.6.0",
+        "nock": "^10.0.1",
+        "eslint": "^6.4.0",
         "nock": "^10.0.1"
+        "jest": "^24.9.0",
     },
     "jest": {
         "verbose": true,
