--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
         "url": "https://github.com/nblackburn/devrant-api.git"
     },
     "scripts": {
-        "lint": "eslint source",
         "test": "jest",
-        "coverage": "jest --coverage"
+        "lint": "eslint src/**/*",
+        "coverage": "jest --coverage",
+        "lint:fix": "eslint src/**/* --fix",
+        "format": "prettier src/**/* --check",
+        "format:fix": "prettier src/**/* --write"
     },
     "dependencies": {
         "axios": "^0.18.1",
@@ -21,8 +24,10 @@
         "dotenv": "^6.1.0",
         "nock": "^10.0.1",
         "eslint": "^6.4.0",
-        "nock": "^10.0.1"
+        "eslint-config-prettier": "^6.3.0",
+        "eslint-plugin-prettier": "^3.1.1",
         "jest": "^24.9.0",
+        "prettier": "^1.18.2"
     },
     "jest": {
         "verbose": true,
