--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "eslint": "^6.4.0",
         "eslint-config-prettier": "^6.3.0",
         "eslint-plugin-prettier": "^3.1.1",
+        "husky": "^3.0.5",
         "jest": "^24.9.0",
         "prettier": "^1.18.2"
     },
@@ -38,5 +39,11 @@
             "/test/fixtures/",
             "/node_modules/"
         ]
+    },
+    "husky": {
+        "hooks": {
+            "pre-push": "npm run test",
+            "pre-commit": "npm run lint:fix && npm run format:fix"
+        }
     }
 }
